Fix Intention Beam Materials, web attack goal, attemtp to fix inner realm chunk generator